demos and fixes

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -103,6 +103,7 @@ create_demo(texture texture.c)
 create_demo(font font.c)
 create_demo(benchmark benchmark.c)
 create_demo(console console.c)
+create_demo(console-next console-next.cpp)
 create_demo(cube cube.c)
 create_demo(glyph glyph.c)
 create_demo(cartoon cartoon.c)
@@ -113,6 +114,7 @@ create_demo(ansi ansi.c)
 create_demo(subpixel subpixel.c)
 create_demo(distance-field distance-field.c)
 create_demo(distance-field-2 distance-field-2.c)
+create_demo(distance-field-2v5 distance-field-2v5.cpp)
 create_demo(distance-field-3 distance-field-3.c)
 
 if(FONTCONFIG_FOUND)
